# iris

./: CMakeLists.txt  README.md  build.sh  intel.sh  oswald01-altera.sh  oswald03-intel.sh  oswald03.sh  radeon-amd.sh
apps/dgemm/: Makefile  dgemm-brisbane.cpp  kernel.cl
apps/dgemm-m/: Makefile  dgemm-brisbane.cpp  kernel.cl
apps/dgemm-p/: Makefile  dgemm-brisbane.cpp  dgemm.cpp  kernel-poly.c  kernel.cl
apps/dgemm-py/: dgemm.py  kernel.cl
apps/eager/: Makefile  eager-brisbane-v2.cpp  eager-brisbane.cpp  kernel-fpga.cl
apps/epoch/: Makefile  epoch-brisbane-v2.cpp  epoch-brisbane-ver2.cpp  epoch-brisbane.cpp  epoch.cpp  kernel-phi.cl  kernel.cl
apps/matmul/: Makefile  kernel-cpu.cl  kernel-gpu.cl  matmul-brisbane.cpp  matmul.cpp
apps/miniFE/: Makefile  Makefile.orig  SparseMatrix_functions-brisbane.hpp  Vector_functions-brisbane.hpp  driver-brisbane.hpp  kernel-cpu.cl  main-brisbane.cpp  make_targets  miniFE_info.hpp  utils.cpp
apps/reduction/: Makefile  kernel-cpu.cl  kernel-gpu.cl  kernel.cl  reduction-brisbane.cpp  reduction.cpp
apps/reduction-m/: Makefile  kernel.cl  reduction-m-brisbane.cpp  reduction-m.cpp
apps/saxpy/: Makefile  kernel.cu  kernel.hip.cpp  kernel.omp.c  saxpy-brisbane.cpp  saxpy.cpp
apps/saxpy-f/: Makefile  saxpy.f90
apps/saxpy-m/: Makefile  kernel.cl  saxpy-brisbane.cpp  saxpy-m-brisbane.cpp  saxpy.cpp
apps/saxpy-map/: Makefile  saxpy-brisbane.cpp
apps/saxpy-p/: Makefile  kernel-poly.c  poly_test.cpp  saxpy-brisbane.cpp  saxpy.cpp
apps/saxpy-py/: Makefile  kernel-cpu.cl  kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.cu  kernel.hip.cpp  saxpy-brisbane.cpp  saxpy.py
apps/specaccel.503.postencil/: Makefile  file.c  kernel-cpu.cl  kernel-gpu.cl  kernels.c  kernels.h  main-brisbane.c  main.c  parboil.c  parboil.h
apps/specaccel.504.polbm/: Makefile  kernel-cpu.cl  lbm-brisbane.c  lbm-brisbane.h  lbm.c  lbm.h  main-brisbane.c  main.c  main.h
apps/specaccel.514.pomriq/: Makefile  alignsize.h  computeQ-brisbane.c  computeQ.c  file.c  kernel-cpu.cl  kernel-gpu.cl  main-brisbane.c  main.c  parboil.c
apps/specaccel.552.pep/: Makefile  ep-brisbane.c  ep.c  kernel-cpu.cl  kernel-gpu.cl  kernel.cl  npbparams.h  print_results.c  print_results.h  type.h  wtime.c
apps/specaccel.554.pcg/: Makefile  cg-brisbane.c  cg.c  kernel-gpu.cl  npbparams.h  print_results.c
apps/specaccel.557.pcsp/: .nfs00000000049102e300000063  Makefile  add-brisbane.c  add.c  adi-brisbane.c  adi.c  error.c  exact_rhs-brisbane.c  exact_rhs.c  header-brisbane.h  header.h  initialize-brisbane.c  initialize.c  kernel-cpu.cl  kernel.cl  npbparams.h  print_results.c  print_results.h  rhs-brisbane.c  rhs.c  set_constants.c  sp-brisbane.c  sp.c  txinvr-brisbane.c  txinvr.c  tzetar.c  verify-brisbane.c  verify.c
apps/specaccel.570.pbt/: Makefile  add-brisbane.c  add.c  bt-brisbane.c  bt.c  error.c  exact_rhs-brisbane.c  exact_rhs.c  header-brisbane.h  header.h  initialize-brisbane.c  initialize.c  inputbt.data  inputbt.data.B  inputbt.data.C  kernel-cpu.cl  kernel.cl  npbparams.h  print_results.c  print_results.h  rhs-brisbane.c  rhs.c  set_constants.c  type.h  verify-brisbane.c  verify.c  x_solve-brisbane.c  x_solve.c  y_solve-brisbane.c  y_solve.c  z_solve-brisbane.c  z_solve.c
apps/stresstests/: Makefile  intricate_depends.py  thousands_tasks.py
apps/vecadd/: Makefile  kernel-cpu.cl  kernel-gpu.cl  kernel-phi.cl  kernel.cl  vecadd-brisbane.cpp  vecadd.cpp
apps/vecadd-map/: kernel.cl  kernel.cu  kernel.ptx  vecadd-brisbane.cpp
apps/vecadd_map/: vecadd-brisbane.cpp
include/: CMakeLists.txt
include/brisbane/: CMakeLists.txt  brisbane.h  brisbane.py  brisbane_internal.h  brisbane_llvm.h  brisbane_omp.h  brisbane_openmp.h  brisbane_poly.h  brisbane_runtime.h
include/hip/: hip_runtime.h
rt/src/: CAPI.cpp  CMakeLists.txt  Command.cpp  Command.h  Debug.h  Device.cpp  Device.h  Kernel.cpp  Kernel.h  Mem.cpp  Mem.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Structs.h  Task.cpp  Task.h  Utils.h
rt/tests/: Makefile.tests
src/: CAPI.cpp  CMakeLists.txt  Command.cpp  Command.h  Config.h.in  Consistency.cpp  Consistency.h  Debug.h  Define.h  Dependency.cpp  Dependency.h  Device.cpp  Device.h  Executor.cpp  Executor.h  Filter.h  FilterTaskSplit.cpp  FilterTaskSplit.h  History.cpp  History.h  Hub.cpp  Hub.h  HubClient.cpp  HubClient.h  Kernel.cpp  Kernel.h  Mem.cpp  Mem.h  Message.cpp  Message.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Policies.cpp  Policies.h  Policy.cpp  Policy.h  PolicyData.cpp  PolicyData.h  (+33 more)
src/compiler/: Brisbane.cpp  Brisbane.h  BrisbanePolyAnalyzer.cpp  BrisbanePolyPass.cpp  CMakeLists.txt  LLVMBrisbane.exports  Makefile
src/compiler/clang/: BrisbaneClang.cpp  CMakeLists.txt  README
src/compiler/llvm/: BrisbaneLLVM.cpp  BrisbaneLLVM.h  CMakeLists.txt  Makefile  README
src/compiler/polly/: BrisbaneLLVM.cpp  BrisbaneLLVM.h  Makefile
src/runtime/: CAPI.cpp  CMakeLists.txt  Charts.cpp  Charts.h  Command.cpp  Command.h  Config.h.in  Consistency.cpp  Consistency.h  DOT.cpp  DOT.h  Debug.h  Device.cpp  Device.h  DeviceCUDA.cpp  DeviceCUDA.h  DeviceHIP.cpp  DeviceHIP.h  DeviceOpenCL.cpp  DeviceOpenCL.h  DeviceOpenMP.cpp  DeviceOpenMP.h  Filter.h  FilterTaskSplit.cpp  FilterTaskSplit.h  FortranAPI.f90  Headers.h  History.h  Hub.cpp  Hub.h  HubClient.cpp  HubClient.h  Kernel.cpp  Kernel.h  Loader.cpp  Loader.h  LoaderCUDA.cpp  LoaderCUDA.h  LoaderHIP.cpp  LoaderHIP.h  (+59 more)
src/tools/: CMakeLists.txt  brisbane-clc.cpp  brisbane-hub.cpp
tests/: Makefile.tests
tests/01_init_finalize/: Makefile  test01_init_finalize.c
tests/02_task_depend/: Makefile  test02_task_depend.c  test02_task_depend.py
tests/03_brisbane_poly/: Makefile  brisbane_poly_kernel.h  hello.c  kernel-poly-old.c  kernel-poly.c  vecadd.c  vecadd.cl
tests/03_release/: test03_release.c
tests/04_enclosing_targets/: test04_enclosing_targets.c
tests/05_snapdragon/: brisbane.mk  kernel.omp.mk  saxpy.mk
tests/06_device/: test06_device.c  test06_device.py
tests/07_policy_register/: Makefile  policy_last.cpp  test07_policy_register.c
(+4 files in other folders)
